# adaptation.ap_samsung.system-plugin-exynos

./: AUTHORS  Makefile.am  configure.ac
conf/: fstab
packaging/: system-plugin-exynos.manifest  system-plugin-exynos.spec
rules/: 51-tizen-system-plugin.rules
scripts/: cpu-governor.sh  resize2fs_by_partlabel.sh
units/: boot.mount  cpu-governor.service  fsck@.service  opt-system-csc.mount  opt-usr.mount  opt.mount  resize2fs-root.service  resize2fs@.service  usr-share-locale.mount
